--- a/00_pytorch_basics.ipynb
+++ b/00_pytorch_basics.ipynb
@@ -1,304 +1,337 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "00_pytorch_basics.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "DpII-qgno6EX",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "DpII-qgno6EX"
       },
       "source": [
-        "# PyTorch Basics  - Tensors, Differentiaton\n",
+        "# PyTorch 入门  - 张量, 求导\n",
         "\n",
-        "Make Your First GAN With PyTorch, 2020"
+        "PyTorch 生成对抗式网络编程, 2020"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
-        "id": "7bkrfSHHAPUB",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "7bkrfSHHAPUB"
       },
+      "outputs": [],
       "source": [
+        "# 导入 PyTorch 的模块\n",
         "import torch"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "R1VyK4VQpNYA",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "R1VyK4VQpNYA"
       },
       "source": [
-        "## Normal python variables"
+        "## 普通的 Python 变量\n",
+        "\n",
+        "变量（variable）是用来存储数据的。"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
-        "id": "MrgKlTsRAfSk",
-        "colab_type": "code",
-        "outputId": "17ba27ed-17ea-47db-a7f2-8db12349f941",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "colab_type": "code",
+        "id": "MrgKlTsRAfSk",
+        "outputId": "17ba27ed-17ea-47db-a7f2-8db12349f941"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "x= 3.5\n",
+            "y= 14.25\n"
+          ]
+        }
+      ],
       "source": [
-        "# normal python variables\n",
-        "\n",
         "x = 3.5\n",
         "\n",
         "y = x*x + 2\n",
         "\n",
-        "print(x, y)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "3.5 14.25\n"
-          ],
-          "name": "stdout"
-        }
+        "print(\"x=\",x)\n",
+        "print(\"y=\",y)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "F4OTVK6hpSWN",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "F4OTVK6hpSWN"
       },
       "source": [
-        "## PyTorch Tensors"
+        "## PyTorch 张量\n",
+        "\n",
+        "张量（tensor）是用来在神经网络中进行计算的。"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
-        "id": "rawHNyI0F_kE",
-        "colab_type": "code",
-        "outputId": "ddbfaf4f-d7b5-4476-899c-94ab948fef10",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "colab_type": "code",
+        "id": "rawHNyI0F_kE",
+        "outputId": "ddbfaf4f-d7b5-4476-899c-94ab948fef10"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "tensor(3.5000)\n",
+            "False\n"
+          ]
+        }
+      ],
       "source": [
-        "# simple pytorch tensor\n",
-        "\n",
         "x = torch.tensor(3.5)\n",
         "\n",
-        "print(x)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "tensor(3.5000)\n"
-          ],
-          "name": "stdout"
-        }
+        "print(x)\n",
+        "print(x.requires_grad)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9awP8pdcpYkS",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "9awP8pdcpYkS"
       },
       "source": [
-        "## Simple Arithmetic"
+        "## 简单的张量计算"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "lzBkNWmEM1Ti",
-        "colab_type": "code",
-        "outputId": "e0ad1a73-06cc-419b-91b3-655ae47f3397",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "colab_type": "code",
+        "id": "lzBkNWmEM1Ti",
+        "outputId": "e0ad1a73-06cc-419b-91b3-655ae47f3397"
       },
-      "source": [
-        "# simple arithmetic with tensors\n",
-        "\n",
-        "y = x + 3\n",
-        "\n",
-        "print(y)"
-      ],
-      "execution_count": 0,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "tensor(6.5000)\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "y = x + 3\n",
+        "\n",
+        "print(y)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 定义张量为允许求导"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
-        "id": "K3ApzYRGWPBn",
-        "colab_type": "code",
-        "outputId": "707d38fc-ceac-45e3-892d-dac9be8b78ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "colab_type": "code",
+        "id": "K3ApzYRGWPBn",
+        "outputId": "707d38fc-ceac-45e3-892d-dac9be8b78ba"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "tensor(3.5000, requires_grad=True)\n"
+          ]
+        }
+      ],
       "source": [
-        "# pytorch tensor with gradient enabled\n",
-        "\n",
         "x = torch.tensor(3.5, requires_grad=True)\n",
         "\n",
         "print(x)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor(3.5000, requires_grad=True)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 34
-        }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ljyzfEjGpf_X",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "ljyzfEjGpf_X"
       },
       "source": [
-        "## Functional Relationship Between Tensors"
+        "## 有函数关系的张量"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
       "metadata": {
-        "id": "aqiw-7N-WS_l",
-        "colab_type": "code",
-        "outputId": "96eca481-708c-45ab-88b5-69e90c485ccb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "colab_type": "code",
+        "id": "aqiw-7N-WS_l",
+        "outputId": "96eca481-708c-45ab-88b5-69e90c485ccb"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "tensor(3.5000)\n",
+            "tensor(1.8750, grad_fn=<MulBackward0>)\n",
+            "tensor(3.5000, requires_grad=True)\n",
+            "tensor(1.8750, grad_fn=<MulBackward0>)\n"
+          ]
+        }
+      ],
       "source": [
-        "# y is defined as a function of x\n",
+        "# y 定义为 x 的函数\n",
         "\n",
         "y = (x-1) * (x-2) * (x-3)\n",
         "\n",
+        "x = torch.tensor(3.5, requires_grad=False)\n",
+        "print(x)\n",
+        "print(y)\n",
+        "\n",
+        "x = torch.tensor(3.5, requires_grad=True)\n",
+        "print(x)\n",
         "print(y)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "tensor(1.8750, grad_fn=<MulBackward0>)\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OomRR79kpj-W",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "OomRR79kpj-W"
       },
       "source": [
-        "## Automatic Differentiation and Gradient Calculation"
+        "## 自动求导与梯度计算"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 22,
       "metadata": {
-        "id": "TOhq_oKGXSOy",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "TOhq_oKGXSOy"
       },
-      "source": [
-        "# work out gradients\n",
-        "\n",
-        "y.backward()"
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "求导前 x 的梯度= None\n",
+            "求导后 x 的梯度= tensor(5.7500)\n",
+            "x= tensor(3.5000, requires_grad=True)\n",
+            "y= tensor(1.8750, grad_fn=<MulBackward0>)\n"
+          ]
+        }
       ],
-      "execution_count": 0,
-      "outputs": []
+      "source": [
+        "# 设置 x 为不允许自动求导的，则无法调用 y.backward()\n",
+        "\n",
+        "# x = torch.tensor(3.5, requires_grad=False)\n",
+        "# y = (x-1) * (x-2) * (x-3)\n",
+        "# y.backward()\n",
+        "\n",
+        "# 设置 x 为允许自动求导的\n",
+        "x = torch.tensor(3.5, requires_grad=True)\n",
+        "y = (x-1) * (x-2) * (x-3)\n",
+        "print(\"求导前 x 的梯度=\",x.grad)\n",
+        "y.backward()\n",
+        "print(\"求导后 x 的梯度=\",x.grad)\n",
+        "print(\"x=\",x)\n",
+        "print(\"y=\",y)\n",
+        "\n",
+        "# y.backward()    # 只能调用一次"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 19,
       "metadata": {
-        "id": "jnBUpoBLfKoI",
-        "colab_type": "code",
-        "outputId": "ae54c18d-3f43-4104-950f-60a14e0f924b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "colab_type": "code",
+        "id": "jnBUpoBLfKoI",
+        "outputId": "ae54c18d-3f43-4104-950f-60a14e0f924b"
       },
-      "source": [
-        "# what is gradient at x = 3.5\n",
-        "\n",
-        "x.grad"
-      ],
-      "execution_count": 0,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "tensor(5.7500)"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 44
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0PHs8JXnfVvh",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
       ],
-      "execution_count": 0,
-      "outputs": []
+      "source": [
+        "# 求导的目的是得出 x 的梯度\n",
+        "\n",
+        "x.grad"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "00_pytorch_basics.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.11"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
