--- a/01_pytorch_computation_graph.ipynb
+++ b/01_pytorch_computation_graph.ipynb
@@ -1,51 +1,38 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "01_pytorch_computation_graph.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "DpII-qgno6EX",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "DpII-qgno6EX"
       },
       "source": [
-        "# PyTorch Basics - Computation Graph\n",
+        "# PyTorch 入门  - 计算图\n",
         "\n",
-        "Make Your First GAN With PyTorch, 2020"
+        "PyTorch 生成对抗式网络编程, 2020"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
-        "id": "7bkrfSHHAPUB",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "7bkrfSHHAPUB"
       },
+      "outputs": [],
       "source": [
         "import torch"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "R1VyK4VQpNYA",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "R1VyK4VQpNYA"
       },
       "source": [
-        "## Simple Computation Graph\n",
+        "## 简单的计算图\n",
         "\n",
         "```\n",
         "  (x) --> (y) --> (z)\n",
@@ -58,63 +45,63 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
-        "id": "MrgKlTsRAfSk",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "MrgKlTsRAfSk"
       },
+      "outputs": [],
       "source": [
-        "# set up simple graph relating x, y and z\n",
+        "# 设置简单的计算图相关的 x,y,z\n",
         "\n",
         "x = torch.tensor(3.5, requires_grad=True)\n",
         "\n",
         "y = x*x\n",
         "\n",
         "z = 2*y + 3"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
-        "id": "TOhq_oKGXSOy",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "TOhq_oKGXSOy"
       },
+      "outputs": [],
       "source": [
-        "# work out gradients\n",
+        "# 计算 z 的梯度\n",
         "\n",
         "z.backward()"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
-        "id": "qDduuF1v6B_D",
-        "colab_type": "code",
-        "outputId": "960f2b3c-0dc3-4d10-950b-01eb82823b80",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "colab_type": "code",
+        "id": "qDduuF1v6B_D",
+        "outputId": "960f2b3c-0dc3-4d10-950b-01eb82823b80"
       },
-      "source": [
-        "# what is gradient at x = 3.5\n",
-        "\n",
-        "print(x.grad)"
-      ],
-      "execution_count": 0,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "tensor(14.)\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "# 输出 x = 3.5 时的梯度\n",
+        "\n",
+        "print(x.grad)"
       ]
     },
     {
@@ -124,7 +111,7 @@
         "id": "I7QFFLTZ-N67"
       },
       "source": [
-        "## Computation Graph With Multiple Links To A Node\n",
+        "## 多个链接到一个结点的计算图\n",
         "\n",
         "```\n",
         "\n",
@@ -146,13 +133,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
+        "colab": {},
         "colab_type": "code",
-        "id": "3CUzpIXo-N69",
-        "colab": {}
+        "id": "3CUzpIXo-N69"
       },
+      "outputs": [],
       "source": [
-        "# set up simple graph relating x, y and z\n",
+        "# 设置计算图相关的 x,y,z\n",
         "\n",
         "a = torch.tensor(2.0, requires_grad=True)\n",
         "b = torch.tensor(1.0, requires_grad=True)\n",
@@ -162,65 +151,61 @@
         "y = 5*a*a + 3*b*b*b\n",
         "\n",
         "z = 2*x + 3*y"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
+        "colab": {},
         "colab_type": "code",
-        "id": "OJ5XB02x-N7A",
-        "colab": {}
+        "id": "OJ5XB02x-N7A"
       },
+      "outputs": [],
       "source": [
-        "# work out gradients\n",
+        "# 计算梯度\n",
         "\n",
         "z.backward()"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
-        "colab_type": "code",
-        "outputId": "804abbe1-cf8f-47eb-ea5d-bda2bef3b68f",
-        "id": "xmq8iajv-N7C",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "colab_type": "code",
+        "id": "xmq8iajv-N7C",
+        "outputId": "804abbe1-cf8f-47eb-ea5d-bda2bef3b68f"
       },
-      "source": [
-        "# what is gradient at a = 2.0\n",
-        "\n",
-        "a.grad"
-      ],
-      "execution_count": 0,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "tensor(64.)"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 14
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# 输出 a = 2.0 时的梯度值\n",
+        "\n",
+        "a.grad"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ShtN80XgIh7g",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "ShtN80XgIh7g"
       },
       "source": [
-        "## Manually check PyTorch Result\n",
+        "## 手工检查 PyTorch 的输出结果\n",
         "\n",
         "\n",
         "```\n",
@@ -236,19 +221,31 @@
         "```\n",
         "\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "VtD5lVckAJlg",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "01_pytorch_computation_graph.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.11"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
