--- a/02_mnist_data.ipynb
+++ b/02_mnist_data.ipynb
@@ -9,7 +9,7 @@
       "source": [
         "# 初试 PyTorch 神经网络 - MNIST 图像数据集\n",
         "\n",
-        "Make Your First GAN With PyTorch, 2020"
+        "PyTorch 生成对抗式网络编程, 2020"
       ]
     },
     {
