--- a/03_mnist_classifier.ipynb
+++ b/03_mnist_classifier.ipynb
@@ -397,6 +397,8 @@
         }
       ],
       "source": [
+        "%%time\n",
+        "\n",
         "C = Classifier()    # 创建分类器\n",
         "\n",
         "# 基于 MNIST 数据集训练神经网络\n",
