--- a/05_cuda_basics.ipynb
+++ b/05_cuda_basics.ipynb
@@ -1,114 +1,120 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "05_cuda_basics.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KcviuZ92K-0Y",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "KcviuZ92K-0Y"
       },
       "source": [
-        "# CUDA Basics - Simple Examples\n",
+        "# CUDA 基础 - 简单例子\n",
         "\n",
-        "Make Your First GAN With PyTorch, 2020"
+        "PyTorch 生成对抗式网络编程, 2020"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
-        "id": "8-fk3XZeK0hP",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "8-fk3XZeK0hP"
       },
+      "outputs": [],
       "source": [
         "import torch\n",
         "import numpy"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "G40AKirRhOcs",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "G40AKirRhOcs"
       },
       "source": [
-        "## Compare Numpy with Python"
+        "## Numpy 与 Python 的计算比较\n",
+        "\n",
+        "numpy 的矩阵计算比 Python 快了 1500 倍"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
-        "id": "TyZQfwoLKyaI",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "TyZQfwoLKyaI"
       },
+      "outputs": [],
       "source": [
-        "# size of square matrix\n",
+        "# 方阵大小\n",
         "size = 600\n",
         "\n",
         "a = numpy.random.rand(size, size)\n",
         "b = numpy.random.rand(size, size)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "RiWSaKT3b57n",
-        "colab_type": "code",
-        "outputId": "343f4028-6700-4a4e-8dd1-2e98763ea861",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "%%timeit\n",
-        "\n",
-        "x = numpy.dot(a,b)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "100 loops, best of 3: 13.2 ms per loop\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
-        "id": "nJe4_VVpYn_i",
-        "colab_type": "code",
-        "outputId": "b9c62d2f-5315-40fb-f129-52eb544c6a09",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "colab_type": "code",
+        "id": "RiWSaKT3b57n",
+        "outputId": "343f4028-6700-4a4e-8dd1-2e98763ea861"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2.77 ms ± 23.1 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+          ]
+        }
+      ],
       "source": [
         "%%timeit\n",
         "\n",
-        "c = numpy.zeros((size,size))\n",
+        "x = numpy.dot(a,b)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# 方阵大小\n",
+        "c = numpy.zeros((size,size))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "colab_type": "code",
+        "id": "nJe4_VVpYn_i",
+        "outputId": "b9c62d2f-5315-40fb-f129-52eb544c6a09"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1min 41s ± 1.43 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+          ]
+        }
+      ],
+      "source": [
+        "%%timeit\n",
         "\n",
         "for i in range(size):\n",
         "  for j in range(size):\n",
@@ -116,216 +122,194 @@
         "      c[i,j] += a[i,k] * b[k,j]\n",
         "    pass\n",
         "  pass"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "1 loop, best of 3: 3min 20s per loop\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7IsDaKcoNFLR",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "7IsDaKcoNFLR"
       },
       "source": [
-        "## Tensors On The GPU"
+        "## GPU 上的张量"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
-        "id": "1H1U4grjNL_m",
-        "colab_type": "code",
-        "outputId": "a0480efe-0ace-413c-a296-6ffa90ae02ef",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "colab_type": "code",
+        "id": "1H1U4grjNL_m",
+        "outputId": "a0480efe-0ace-413c-a296-6ffa90ae02ef"
       },
-      "source": [
-        "# create tensor on GPU\n",
-        "\n",
-        "x = torch.cuda.FloatTensor([3.5])\n",
-        "x.type()"
-      ],
-      "execution_count": 0,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "'torch.cuda.FloatTensor'"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 5
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# 创建 GPU 上的张量\n",
+        "\n",
+        "x = torch.cuda.FloatTensor([3.5])\n",
+        "x.type()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
-        "id": "ITLReJU_bR6-",
-        "colab_type": "code",
-        "outputId": "d4a6ef29-53f9-442b-80cd-cdae308f8168",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "colab_type": "code",
+        "id": "ITLReJU_bR6-",
+        "outputId": "d4a6ef29-53f9-442b-80cd-cdae308f8168"
       },
-      "source": [
-        "# check tensor is on GPU\n",
-        "x.device"
-      ],
-      "execution_count": 0,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "device(type='cuda', index=0)"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# 检查 GPU 上的张量\n",
+        "x.device"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
-        "id": "OKCqHZ0zbcIn",
-        "colab_type": "code",
-        "outputId": "fceed783-9865-40e5-e15a-3f2629d65df6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "colab_type": "code",
+        "id": "OKCqHZ0zbcIn",
+        "outputId": "fceed783-9865-40e5-e15a-3f2629d65df6"
       },
-      "source": [
-        "# calculation with tensor on GPU\n",
-        "\n",
-        "y = x * x\n",
-        "y"
-      ],
-      "execution_count": 0,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([12.2500], device='cuda:0')"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 7
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "y= tensor([12.2500], device='cuda:0')\n"
+          ]
         }
+      ],
+      "source": [
+        "# 计算 GPU 上的张量\n",
+        "\n",
+        "y = x * x\n",
+        "print(\"y=\", y)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yF8mW5kqiPOZ",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "yF8mW5kqiPOZ"
       },
       "source": [
-        "## CUDA Performance"
+        "## CUDA 的性能"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
-        "id": "Pg78pR2vM_U2",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "Pg78pR2vM_U2"
       },
+      "outputs": [],
       "source": [
-        "# create cuda tensors from numpy arrays\n",
+        "# 基于 Numpy 创建 GPU 上的张量\n",
         "\n",
         "aa = torch.cuda.FloatTensor(a)\n",
         "bb = torch.cuda.FloatTensor(b)"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
-        "id": "1_7JODnbF2gw",
-        "colab_type": "code",
-        "outputId": "f5017e4b-578b-45b3-a95a-e7325f62d84c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        }
+        },
+        "colab_type": "code",
+        "id": "1_7JODnbF2gw",
+        "outputId": "f5017e4b-578b-45b3-a95a-e7325f62d84c"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "43.9 µs ± 12 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+          ]
+        }
+      ],
       "source": [
         "%%timeit\n",
         "\n",
         "cc = torch.matmul(aa, bb)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "The slowest run took 29.97 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-            "10000 loops, best of 3: 74.6 µs per loop\n"
-          ],
-          "name": "stdout"
-        }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "8bRilYK-h2bN",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ba7Ggq_6M5Bb",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "ba7Ggq_6M5Bb"
       },
       "source": [
-        "## Standard CUDA Check And Set Up"
+        "## 标准的 CUDA 检查与设置"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
       "metadata": {
-        "id": "lU86giDzM3Dv",
-        "colab_type": "code",
-        "outputId": "da312c5b-ecfb-4e38-a6fa-4ccf475d7de9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        }
+        },
+        "colab_type": "code",
+        "id": "lU86giDzM3Dv",
+        "outputId": "da312c5b-ecfb-4e38-a6fa-4ccf475d7de9"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "using cuda: GeForce GTX 1650\n",
+            "device=cuda\n"
+          ]
+        }
+      ],
       "source": [
-        "# check if CUDA is available\n",
-        "# if yes, set default tensor type to cuda\n",
+        "# 检查 CUDA 是否可用\n",
+        "# 如果“可用”，设置默认地创建张量在 CUDA 上\n",
         "\n",
         "if torch.cuda.is_available():\n",
         "  torch.set_default_tensor_type(torch.cuda.FloatTensor)\n",
@@ -334,30 +318,34 @@
         "\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "\n",
-        "device"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "using cuda: Tesla P100-PCIE-16GB\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "device(type='cuda')"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 10
-        }
+        "print(\"device=\" + str(device))"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "name": "05_cuda_basics.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.11"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
