--- a/10_celeba_download_make_hdf5.ipynb
+++ b/10_celeba_download_make_hdf5.ipynb
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -83,10 +83,36 @@
         "id": "UJXhnB3wv7kl",
         "outputId": "4131f301-1c89-4b21-a9e5-3eb2aff267f3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "images done ..  1000\n",
+            "images done ..  2000\n",
+            "images done ..  3000\n",
+            "images done ..  4000\n",
+            "images done ..  5000\n",
+            "images done ..  6000\n",
+            "images done ..  7000\n",
+            "images done ..  8000\n",
+            "images done ..  9000\n",
+            "images done ..  10000\n",
+            "images done ..  11000\n",
+            "images done ..  12000\n",
+            "images done ..  13000\n",
+            "images done ..  14000\n",
+            "images done ..  15000\n",
+            "images done ..  16000\n",
+            "images done ..  17000\n",
+            "images done ..  18000\n",
+            "images done ..  19000\n",
+            "images done ..  20000\n"
+          ]
+        }
+      ],
       "source": [
         "# location of the HDF5 package, yours may be under /gan/ not /myo_gan/\n",
-        "hdf5_file = 'mount/My Drive/Colab Notebooks/myo_gan/celeba_dataset/celeba_aligned_small.h5py'\n",
         "hdf5_file = 'datasets/celeba_aligned_small.h5py'\n",
         "\n",
         "# how many of the 202,599 images to extract and package into HDF5\n",
@@ -96,7 +122,7 @@
         "\n",
         "    count = 0\n",
         "\n",
-        "    with zipfile.ZipFile('tmp/img_align_celeba.zip', 'r') as zf:\n",
+        "    with zipfile.ZipFile('D:/TEMP/archive.zip', 'r') as zf:\n",
         "      for i in zf.namelist():\n",
         "        if (i[-4:] == '.jpg'):\n",
         "          # extract image\n",
@@ -105,7 +131,8 @@
         "          os.remove(ofile)\n",
         "\n",
         "          # add image data to HDF5 file with new name\n",
-        "          hf.create_dataset('img_align_celeba/'+str(count)+'.jpg', data=img, compression=\"gzip\", compression_opts=9)\n",
+        "          file_name='img_align_celeba/'+str(count)+'.jpg'\n",
+        "          hf.create_dataset(file_name, data=img, compression=\"gzip\", compression_opts=9)\n",
         "          \n",
         "          count = count + 1\n",
         "          if (count%1000 == 0):\n",
@@ -119,6 +146,13 @@
         "        pass\n",
         "      pass"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
