--- a/06_gan_simple_pattern.ipynb
+++ b/06_gan_simple_pattern.ipynb
@@ -114,7 +114,7 @@
         "id": "AJ_E9wgYQybx"
       },
       "source": [
-        "## 判别网络"
+        "## 构建 Discriminator"
       ]
     },
     {
@@ -200,7 +200,7 @@
         "id": "IFajrD3xCgsb"
       },
       "source": [
-        "## 测试判别器"
+        "## 测试 Discriminator"
       ]
     },
     {
@@ -304,7 +304,7 @@
         "id": "SsE9-KrguowG"
       },
       "source": [
-        "## 生成器网络"
+        "## 构建 Generator"
       ]
     },
     {
@@ -387,7 +387,7 @@
         "id": "SwjycPNXxF7G"
       },
       "source": [
-        "## 测试生成器的输出"
+        "## 测试 Generator"
       ]
     },
     {
@@ -553,7 +553,7 @@
         "id": "vddYtD84xkmI"
       },
       "source": [
-        "## 手工执行生成器（看效果）"
+        "## 执行 Generator"
       ]
     },
     {
